--- a/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -15,9 +15,7 @@
                 </p:submenu>
                 <p:submenu label="Inspeção">
                     <p:menuitem value="Novo" outcome="novo" icon="ui-icon-check"/>
-                </p:submenu>
-                <p:submenu label="Relatório">
-                    <p:menuitem value="Local" url="#" icon="ui-icon-image"/>
+                    <p:menuitem value="Relatório" outcome="relatorio" icon="ui-icon-image"/>
                 </p:submenu>
                 <p:menuitem value="Sair" url="#" icon="ui-icon-close"/>
             </p:menu>
