--- a/src/main/webapp/resources/senac/styles/layout.css
+++ b/src/main/webapp/resources/senac/styles/layout.css
@@ -31,6 +31,24 @@
     border-right: 1px solid #eaeaea;
 }
 
+/* hover */
+
+/*ui-menu .ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover {
+    background-color: #f6f6f6 !important
+}*/
+
+.ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover {
+    background-color: #f6f6f6 !important;
+}
+
+/*.ui-menuitem-link.ui-state-hover{
+    background-color: #f6f6f6;
+}
+
+a.li.hover{
+     background-color: #f6f6f6;
+}*/
+
 .aw-sidebar.is-toggled {
     margin-left: 0px;
 }
