alteração tela relatório: adição aba relatório

--- a/src/main/webapp/resources/senac/styles/components.css
+++ b/src/main/webapp/resources/senac/styles/components.css
@@ -20,3 +20,7 @@ body .ui-panelgrid .ui-panelgrid-cell {
 .ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover {
     background-color: #f6f6f6 !important;
 }
+
+.ui-tabs .ui-tabs-nav.ui-widget-header li a {
+    color: #f6f6f6 !important;
+}
