--- a/src/main/webapp/resources/senac/styles/layout.css
+++ b/src/main/webapp/resources/senac/styles/layout.css
@@ -41,6 +41,10 @@
     background-color: #f6f6f6 !important;
 }
 
+.ui-tabs .ui-tabs-nav.ui-widget-header li a {
+    color: #f6f6f6 !important;
+}
+
 /*.ui-menuitem-link.ui-state-hover{
     background-color: #f6f6f6;
 }
