adição tela cadastro usuário

--- a/src/main/webapp/resources/senac/styles/components.css
+++ b/src/main/webapp/resources/senac/styles/components.css
@@ -17,10 +17,10 @@ body .ui-panelgrid .ui-panelgrid-cell {
 	padding: 0.3rem;
 }
 
-.ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover {
+/*.ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover {
     background-color: #f6f6f6 !important;
-}
+}*/
 
-.ui-tabs .ui-tabs-nav.ui-widget-header li a {
+/*.ui-tabs .ui-tabs-nav.ui-widget-header li a {
     color: #f6f6f6 !important;
-}
+}*/
