--- a/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -7,7 +7,7 @@
         <h:form>
             <p:menu toggleable="true" style="width: 98%; margin-left: 3px; ">
                 <p:menuitem value="Home" outcome="inicio" icon="ui-icon-home" />
-                <p:menuitem value="Usuário" outcome="inicio" icon="ui-icon-contact" />
+                <p:menuitem value="Usuário" outcome="usuario" icon="ui-icon-contact" />
                 <p:submenu label="Cadastro">
                     <p:menuitem value="Empreendimento" outcome="empreendimento" icon="ui-icon-image" />
                     <p:menuitem value="Categoria" outcome="categoria" icon="ui-icon-suitcase"/>
