tentativa layout e formatação hora e data no inspeção controle

--- a/src/main/webapp/resources/senac/styles/components.css
+++ b/src/main/webapp/resources/senac/styles/components.css
@@ -16,3 +16,7 @@
 body .ui-panelgrid .ui-panelgrid-cell {
 	padding: 0.3rem;
 }
+
+/*a .ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover {
+background-color: #000000 !important;
+}*/
