--- a/src/main/webapp/resources/senac/styles/layout.css
+++ b/src/main/webapp/resources/senac/styles/layout.css
@@ -67,3 +67,6 @@
     margin: 15px 0;
 }
 
+/*.ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover {
+background-color: #000000 !important;
+}*/
