inicio tela publica

--- a/src/main/webapp/WEB-INF/templates/layout_sem_menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout_sem_menu.xhtml
@@ -30,9 +30,9 @@
             
             <a href="#" class="aw-toggle js-toggle" ><i class="fa fa-bars"></i></a>
 
-            <a href="#" class="aw-toggle  js-toggle">
+<!--            <a href="#" class="aw-toggle  js-toggle">
                 <i class="pi pi-align-justify" style="color: white; size: 20px"> </i>
-            </a>
+            </a>-->
 
 <!--            <a href="#" class="aw-toggle  js-toggle">
                 <i class="pi pi-home" style="color: white; size: 20px" />
