arrumando tela de inicio-publico

--- a/src/main/webapp/WEB-INF/templates/layout_sem_menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout_sem_menu.xhtml
@@ -26,7 +26,7 @@
     <h:body>
 
         <header class="aw-topbar" style="margin-bottom: 5px;">
-            <h:graphicImage library="senac" name="images/logo.png" />
+            <h:graphicImage library="senac" name="images/logo_texto_2_redimensionado_1.png" />
             
             <a href="#" class="aw-toggle js-toggle" ><i class="fa fa-bars"></i></a>
 
