arrumando tela inicio publico-2

--- a/src/main/webapp/WEB-INF/templates/layout_sem_menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout_sem_menu.xhtml
@@ -28,7 +28,7 @@
         <header class="aw-topbar" style="margin-bottom: 5px;">
             <h:graphicImage library="senac" name="images/logo_texto_2_redimensionado_1.png" />
             
-            <a href="#" class="aw-toggle js-toggle" ><i class="fa fa-bars"></i></a>
+<!--            <a href="#" class="aw-toggle js-toggle" ><i class="fa fa-bars"></i></a>-->
 
 <!--            <a href="#" class="aw-toggle  js-toggle">
                 <i class="pi pi-align-justify" style="color: white; size: 20px"> </i>
@@ -87,14 +87,14 @@
             <ui:include src="menu.xhtml" />
         </aside>-->
 
-        <section class="aw-content  js-content">
+<!--        <section class="aw-content  js-content">-->
 
-            <p:messages id="messages" showSummary="true" closable="true">
+<!--            <p:messages id="messages" showSummary="true" closable="true">
                 <p:autoUpdate/>
-            </p:messages>
+            </p:messages>-->
             
             <ui:insert name="content" />
-        </section>
+<!--        </section>-->
 
     </h:body>
 
