troca nome pagina inicio -> home e inicio_publico -> inicio

--- a/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -6,7 +6,7 @@
     <nav class="aw-menu">
         <h:form>
             <p:menu toggleable="true" style="width: 98%; margin-left: 3px; ">
-                <p:menuitem value="Home" outcome="inicio" icon="ui-icon-home" />
+                <p:menuitem value="Home" outcome="home" icon="ui-icon-home" />
                 <p:menuitem value="Usuário" outcome="usuario" icon="ui-icon-contact" />
                 <p:submenu label="Cadastro">
                     <p:menuitem value="Empreendimento" outcome="empreendimento" icon="ui-icon-image" />
