tentativa GrowView e pesquisa por função - no momento está comentado pois tem mais pessoas para teste da aplicação

--- a/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -25,14 +25,14 @@
 
     <h:body>
 
-        <header class="aw-topbar" style="margin-bottom: 5px;">
+        <header class="aw-topbar" style="margin-bottom: 5px">
             
             <h:graphicImage library="senac" name="images/logo_texto_2_redimensionado_1.png"/>
             
             <a href="#" class="aw-toggle js-toggle" ><i class="fa fa-bars"></i></a>
 
-            <a href="#" class="aw-toggle  js-toggle">
-                <i class="pi pi-align-justify" style="color: white; size: 20px"> </i>
+            <a href="#" class="aw-toggle  js-toggle" style="text-align: left">
+                <i class="pi pi-align-justify" style="color: white; size: 20px;"> </i>
             </a>
 
 <!--            <a href="#" class="aw-toggle  js-toggle">
