tentando resolver atualização tabela populada de empreendimento e categoria - quando salva um novo, não atualiza, atualizando layout, teste grow

--- a/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -32,7 +32,7 @@
             <a href="#" class="aw-toggle js-toggle" ><i class="fa fa-bars"></i></a>
 
             <a href="#" class="aw-toggle  js-toggle" style="text-align: left">
-                <i class="pi pi-align-justify" style="color: white; size: 20px;"> </i>
+                <i class="pi pi-bars" style="color: white; size: 20px;"> </i>
             </a>
 
 <!--            <a href="#" class="aw-toggle  js-toggle">
